--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@
 # Eclipse Preferences
 *.prefs
 
+# Train Route Manager savefiles
+*.trm
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 /bin/
